# zksync

./: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml
infrastructure/zcli/: package.json
ya-integration/docker/: build-prover-docker.sh
ya-integration/docker/prover/: Dockerfile  download-keys.sh  ya-entry.sh
ya-integration/yagna-prover/: Cargo.toml
ya-integration/yagna-prover/src/: client.rs  main.rs
