[package]
name = "yagna-prover"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backoff = "0.1.6"
env_logger = "0.6"
log = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0.90"
serde_json = "1.0.0"
structopt = "0.3.20"

zksync_prover =  { path = "../../core/bin/prover", version = "1.0.0" }
zksync_state = { path = "../../core/lib/state", version = "1.0" }
zksync_types = { path = "../../core/lib/types", version = "1.0" }
zksync_circuit = { path = "../../core/lib/circuit", version = "1.0" }
zksync_crypto = { path = "../../core/lib/crypto", version = "1.0" }
zksync_config = { path = "../../core/lib/config", version = "1.0" }
zksync_utils = { path = "../../core/lib/utils", version = "1.0" }
zksync_prover_utils = { path = "../../core/lib/prover_utils", version = "1.0" }
